@@ -1,3 +1,7 @@
+MD-2004-08-12-0: Bugfix:     changed wrong directory of qping binary
+                             autoinst shadowd
+                 Changed:    inst_sge
+
 RH-2004-08-12-0: Bugfix:     Refix Issue 1161
                  Issue:      1161
                  Bugtraq:    5080856
